--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ h1 , h2{
     text-align: left;
 }
 body{
-    background-color: #eef0f9;
+    background-color: #9BB0C1;
 }
 #main{
     padding: 1%;
@@ -29,7 +29,7 @@ body{
     text-align: left;
 }
 .exp-tipos{
-    background-color: #55ffc9;
+    background-color: #51829B;
     width: 25%;
     padding: 1%;
 }
